Responsive de la page About et Home fini. Bug du footer résolu et collapse fini

--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -1,4 +1,4 @@
-.header { 
+.header {
     height: 47px;
     position: fixed;
     width: calc(100% - 40px);
@@ -8,21 +8,22 @@
 
     display: flex;
     justify-content: space-between;
-    margin: 0px 20px;
-    padding: 20px 0px 10px 0px;
+    padding: 20px 20px 10px 20px;
 
     background-color: white;
-    box-shadow: -10px 5px 5px white;
+    box-shadow: 5px 1px 5px white, -5px 1px 2px white ;
 
     @include tablet {
         width: calc(100% - 80px);
         height: 68px;
-        margin: 0px 40px; /* Marge gauche du Header, la marge droite est sur la nav*/
+        padding: 40px;
+        padding-bottom: 0px;
+        margin: auto;
     }
 
     @include desktop {
         left: 50%;
-        transform: translate(calc(-50% - 40px), 0%);
+        transform: translate(-50%, 0%);
     }
 }
 
