--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,10 +4,14 @@
 @import './utils/variable';
 @import './utils/breakpoints';
 
+@import './components/banner';
+@import './components/collapse.scss';
+
 @import './layouts/header';
 @import './layouts/footer';
 
 @import './pages/home';
+@import './pages/about';
 
 main {
     margin: 83px 20px 20px 20px;
@@ -17,10 +21,19 @@ main {
     min-height: calc(100vh - 83px - 20px - $heigth-footer);
 
     @include tablet {
-        margin: 103px 40px 40px 40px;
+        width: calc(100% - 80px);
+        max-width: 1240px;
+        margin: auto;
+        margin-top: 171px;
 
         /* Footer dont float : 
-                    calc(100vh - margin-top - margin-bot - $height-footer) */
-        min-height: calc(100vh - 103px - 40px - $heigth-footer);
+                    calc(100vh - margin-top - margin-top-footer - $height-footer) */
+        min-height: calc(100vh - 152px - 20px - $heigth-footer);
+    }
+
+    @include desktop {
+        /* Footer dont float : 
+                    calc(100vh - margin-top - height-footer) */
+        min-height: calc(100vh - 152px - 229px);
     }
 }
